--- a/ProgettoAnselmo/Properties/Resources.resx
+++ b/ProgettoAnselmo/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Pulsante" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pulsante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Sfondo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sfondo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -127,7 +130,7 @@
   <data name="Titolo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Titolo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Pulsante" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Pulsante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NastroPrato2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NastroPrato2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
